--- a/style.css
+++ b/style.css
@@ -107,13 +107,15 @@ footer{
     border-top: 1px solid;
     margin-top: 20px;
     height: 133.893px;
+    display: grid;
+    grid-template-columns: 400px 1fr;
+    align-items: end;
 }
 
 form {
     display:grid;
     grid-template-columns: 150px 1fr;
     align-items: center;
-    margin-top:20px ;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -123,6 +125,7 @@ form {
     height: 30px;
     padding: 32px;
     margin-left: 20px;
+    margin-bottom: 19.1465px;
 }
 
 label{
@@ -141,111 +144,36 @@ input[type="color"]:hover {
     background-color: deepskyblue;
 }
 
-@media print{
-    html{
-        margin: 0;
-        padding: 0;
-        font-family: 'Calibri', sans-serif;
-    }
+footer div{
+    display: grid;
+    grid-template-columns: 70px 70px;
+    justify-content: right;
+    
+}
 
-    body{
-        margin: 0;
-    }
+footer div img{
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    background-size: 60px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    padding:6px;
     
-    header{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-column-start: 2;
-        background-color: #fffd78;
-        text-align: left;
-        width: 100%;
-    
-    }
-    
-    header div{
-        border-bottom: 1px solid black;
-    }
-    
-    header h2{
-        width: 205.2px;
-        border-bottom: 2px solid black;
-        font-style: italic;
-        margin: 0;
-    }
-    
+}
+
+
+@media print{   
     main{
-        display: grid;
         grid-template-columns: 273.6px 1fr;
         padding-right: 14.4px;
         padding-left: 14.4px;
-    }
-    
-    main p{
-        margin:0;
-    }
-    
-    main #gauche{
-        margin-right: 18px;
-        border-right: 1px solid black;
-
-    }
-    
+    }  
     main #gauche #moi{
-        width:123.5px;
+        width:150px;
         border: 1px solid black;
 
     }
-    
-    main #gauche h3{
-        display:block;
-        text-decoration: underline;
-        margin-left: 10px;
-    }
-    
-    main #gauche h2{
-        display: block;
-        background-color: #fffd78;
-        width: 123.5px;
-        text-align: center;
-        border: 1px solid black;
-        margin-right: 195px;
-        font-weight: 100;
-    }
-    
-    main #droite section{
-        padding-bottom: 7.2px;
-    }
-    
-    
-    main #droite h2{
-        display: block;
-        background-color: #fffd78;
-        width: 56.3%;
-        text-align: center;
-        border: 1px solid black;
-        font-weight: 100;
-    }
-    
-    main #liste{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-    
-    main #liste li{
-        padding:0;
-    }
-    
-    main #droite .titre{
-        display:grid;
-        grid-template-columns: 72px 1fr;
-        align-items: center;
-    }
-    main #gauche .titre{
-        display:grid;
-        grid-template-columns: 36px 1fr;
-        align-items: center;
-    }
-
     footer{
         display: none;
     }
