--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ header h2{
     font-style: italic;
 
 }
+
+.imageSRV path {
+    fill: #ffffff;
+  }
 #lightbox {
     position: fixed;
     display: none;
@@ -44,6 +48,10 @@ header h2{
 
 body{
     margin: 0;
+}
+
+#space{
+    display: none;
 }
 
 main{
@@ -125,7 +133,7 @@ footer{
     margin-top: 20px;
     height: 133.893px;
     display: grid;
-    grid-template-columns: 400px 1fr;
+    grid-template-columns: 1fr 1fr;
     align-items: end;
 }
 
@@ -138,10 +146,10 @@ form {
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
     height: 30px;
     padding: 32px;
-    margin-left: 20px;
     margin-bottom: 19.1465px;
 }
 
@@ -177,6 +185,46 @@ footer div img{
     border: 1px solid rgba(255, 255, 255, 0.3);
     padding:6px;
     
+}
+
+@media screen and (max-width:1024px){
+    main{
+        grid-template-columns: 1fr;
+        justify-content: center;
+
+    }
+
+    main #gauche{
+        display: grid;
+        border: none;
+        justify-content: center;
+        align-items: center;
+        margin-right: 0;
+    }
+
+    figure{
+        display: grid;
+        justify-content: center;
+    }
+
+    main #gauche h2{
+        width: 100%;
+        padding-right: 0;
+
+    }
+
+    main #droite .titre{
+        grid-template-columns: 15% 1fr;
+    }
+
+    footer{
+        grid-template-columns: 1fr;
+        height: auto;
+    }
+
+    footer #play{
+        display: none;
+    }
 }
 
 
